@@ -37,7 +37,7 @@ case "${1}" in
       fi
 
       mkdir -p /run/lock /run/shm
-      chmod 1777 /run/shm
+      chmod 1777 /run/shm /run/lock
 
       log_info_msg "Mounting virtual file systems: ${INFO}/run" 
 
