@@ -61,7 +61,7 @@
 <!ENTITY binutils-size "22,184 KB">
 <!ENTITY binutils-url "&gnu;binutils/binutils-&binutils-version;.tar.bz2">
 <!ENTITY binutils-md5 "e0f71a7b2ddab0f8612336ac81d9636b">
-<!ENTITY binutils-home "$gnu-software;binutils/">
+<!ENTITY binutils-home "&gnu-software;binutils/">
 <!ENTITY binutils-ch5p1-du "445 MB">
 <!ENTITY binutils-ch5p1-sbu "1 SBU">
 <!ENTITY binutils-ch5p2-du "448 MB">
@@ -352,7 +352,7 @@
 <!ENTITY less-ch6-du "3.6 MB">
 <!ENTITY less-ch6-sbu "0.1 SBU">
 
-<!ENTITY lfs-bootscripts-version "20140815">              <!-- Scripts depend on this format -->
+<!ENTITY lfs-bootscripts-version "20141110">              <!-- Scripts depend on this format -->
 <!ENTITY lfs-bootscripts-size "BOOTSCRIPTS-SIZE KB">         <!-- Updated in Makefile -->
 <!ENTITY lfs-bootscripts-url "&downloads-root;lfs-bootscripts-&lfs-bootscripts-version;.tar.bz2">
 <!ENTITY lfs-bootscripts-md5 "BOOTSCRIPTS-MD5SUM">           <!-- Updated in Makefile -->
